# flow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml
.agents/skills/flow-amend/: SKILL.md
.agents/skills/flow-build/: SKILL.md
.agents/skills/flow-build-task/: SKILL.md
.agents/skills/flow-close/: SKILL.md
.agents/skills/flow-doctor/: SKILL.md
.agents/skills/flow-plan/: SKILL.md
.agents/skills/flow-roadmap/: SKILL.md
.agents/skills/flow-run/: SKILL.md
.agents/skills/flow-setup/: SKILL.md
.cargo/: config.toml
.claude/: settings.json
.cursor/rules/: flow.mdc
.flow/: config.yaml  state.yaml
.github/workflows/: ci.yml
assets/agents/: amend.base.md  build-task.base.md  build.base.md  close.base.md  plan.base.md  roadmap.base.md  run.base.md  setup.base.md  start.base.md  status.base.md  test.base.md
assets/conventions/: build.md  close.md  core.md  plan.md  roadmap.md  run.md  spec.md  test.md
assets/gitignore.d/: flow.gitignore
assets/templates/: AGENTS.md.tmpl  config.yaml.tmpl  plan.md.tmpl  roadmap.md.tmpl  run-log.md.tmpl  run-manual.md.tmpl  run-release-notes.md.tmpl  run.md.tmpl  spec.md.tmpl  status.md.tmpl  tasks.md.tmpl
crates/flow-cli/: Cargo.toml  README.md  build.rs
crates/flow-cli/examples/: generate_cli_reference.rs  generate_summary.rs
crates/flow-cli/src/: args.rs  cli_help.rs  generated_docs.rs  lib.rs  logo.rs  main.rs  output.rs  ownership.rs  public_command.rs  summary.rs
crates/flow-cli/src/cmd/: amend.rs  build.rs  build_pending.rs  build_task.rs  close.rs  doctor.rs  export_assets.rs  init.rs  mod.rs  plan.rs  plan_gate.rs  roadmap.rs  run.rs  set.rs  settings.rs  setup.rs  start.rs  status.rs  task_state.rs  test.rs  update.rs  version_marker.rs
crates/flow-cli/tests/: cli_drift.rs  cold_start.rs  command_render.rs  docs_freshness.rs  docs_layout.rs  e2e_scenarios.rs  embedded_assets.rs  golden.rs  host_snapshots.rs  installer_paths.rs  integration.rs  release_destructive.rs  release_surfaces.rs  repo_local_state.rs  roadmap_cli.rs  run_attach.rs  run_branch.rs  run_cli.rs  run_discovery.rs  run_last_milestone_finalize.rs  run_rescan.rs  start_milestone.rs  summary_drift.rs
crates/flow-cli/tests/snapshots/: host_snapshots__claude_code_skill_close.snap  host_snapshots__claude_code_skill_status.snap  host_snapshots__claude_code_tree.snap  host_snapshots__codex_skill_test.snap  host_snapshots__codex_tree.snap  host_snapshots__cursor_rule.snap  host_snapshots__cursor_tree.snap
crates/flow-core/: Cargo.toml  README.md  build.rs
crates/flow-core/benches/: bench_parsers.rs
crates/flow-core/src/: assets.rs  config.rs  drift.rs  envelope.rs  error.rs  git.rs  ids.rs  lib.rs  logging.rs  paths.rs  preflight.rs  principles.rs  prompt.rs  render.rs  resume.rs  roadmap.rs  settings.rs  status.rs  verify.rs
crates/flow-core/src/drift/: json.rs  render.rs
crates/flow-core/src/parse/: markdown.rs  mod.rs  plan.rs  roadmap.rs  spec.rs  status.rs  tasks.rs
crates/flow-core/tests/: property_tests.rs  snapshots.rs
crates/flow-core/tests/snapshots/: snapshots__drift_clean_status_mode.snap  snapshots__drift_missing_tasks.snap  snapshots__roadmap_parser_shape.snap  snapshots__status_stamp_shape.snap  snapshots__tasks_parser_shape.snap
crates/flow-host-claude-code/: Cargo.toml
crates/flow-host-claude-code/src/: install.rs  lib.rs  recommendations.rs
crates/flow-host-claude-code/src/assets/: AGENTS.md.fragment  SKILL.body.md.tmpl  settings.json.tmpl
crates/flow-host-codex/: Cargo.toml
crates/flow-host-codex/src/: lib.rs
crates/flow-host-codex/src/assets/: AGENTS.md.fragment  SKILL.body.md.tmpl
crates/flow-host-cursor/: Cargo.toml
crates/flow-host-cursor/src/: lib.rs
crates/flow-host-cursor/src/assets/: AGENTS.md.fragment  flow.mdc
docs/: README.md  SUMMARY.md  architecture.md  drift-rules.md  hosts.md  security.md  why-flow.md
docs/decisions/: 0001-choose-rust.md  0002-git-shellout-vs-libgit2.md  0009-documentation-architecture.md  0010-release-commands-and-local-history.md  0012-conventions-shards.md  0016-unified-run-workspace.md  0017-cargo-only-install.md  0018-run-finalize-closing-commit.md  README.md
docs/reference/: artifacts.md  cli.md  commands.md  glossary.md
docs/start-here/: 01-your-first-change.md  02-your-first-roadmap-run.md
examples/hello-world-run/: README.md  hello.py  test_hello.py
flow/: README.md
flow/backlog/: README.md
flow/docs/: README.md  artifact-index.md  directory-layout.md  non-logic-verification.md
scripts/: bump-minor.sh  bump-patch.sh  release-preflight.sh
tests/: flow_control_file_model_task_anchors.rs  flow_directory_layout_task_anchors.rs  flow_milestone_counter_task_anchors.rs  flow_ownership_command_task_anchors.rs  flow_release_task_anchors.rs  flow_roadmap_source_handling_task_anchors.rs  flow_roadmap_task_anchors.rs  flow_run_task_anchors.rs  flow_set_confirmation_task_anchors.rs  phase_b_task_anchors.rs
(+73 files in other folders)
