[workspace]
resolver = "2"
members = [
    "crates/flow-core",
    "crates/flow-cli",
    "crates/flow-host-claude-code",
    "crates/flow-host-codex",
    "crates/flow-host-cursor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Flow maintainers"]
license = "MIT"
repository = "https://github.com/oharlem/flow"
homepage = "https://github.com/oharlem/flow"

[workspace.dependencies]
flow-core = { path = "crates/flow-core", version = "0.1.0" }
flow-host-claude-code = { path = "crates/flow-host-claude-code", version = "0.1.0" }
flow-host-codex = { path = "crates/flow-host-codex", version = "0.1.0" }
flow-host-cursor = { path = "crates/flow-host-cursor", version = "0.1.0" }

clap = { version = "4.5", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
indexmap = { version = "2", features = ["serde"] }
walkdir = "2.5"
owo-colors = "4"
tempfile = "3"
once_cell = "1"
glob = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
