[package]
name = "flow-host-cursor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cursor host adapter for Flow (preview)."

[dependencies]
flow-core = { workspace = true }
thiserror = { workspace = true }
